--- a/week02-ABrum90.ipynb
+++ b/week02-ABrum90.ipynb
@@ -15,11 +15,7 @@
      ]
     }
    ],
-   "source": [
-    "%%bash\n",
-    "cd ~/notebooks\n",
-    "git clone git@github.com:abrum90/hds5210-week02.git"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,16 +69,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "nothing to commit, working directory clean\n"
+      "[master 1e59b28] Adding homework\n",
+      " 1 file changed, 141 insertions(+)\n",
+      " create mode 100644 week02-ABrum90.ipynb\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'week02-abrum90.ipynb' did not match any files\n",
       "warning: push.default is unset; its implicit value has changed in\n",
       "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
       "and maintain the traditional behavior, use:\n",
@@ -104,14 +99,15 @@
       "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
       "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
       "\n",
-      "Everything up-to-date\n"
+      "To git@github.com:abrum90/hds5210-week02.git\n",
+      "   4037f5a..1e59b28  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "cd ~/notebooks/hds5210-week02/\n",
-    "git add week02-abrum90.ipynb\n",
+    "git add week02-ABrum90.ipynb\n",
     "git commit -a -m \"Adding homework\"\n",
     "git push"
    ]
